Добавил шрифты. Подключил normalize, Font Awesome и Animate css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,32 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Ювента-Крым</title>
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+	<link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-	
+
+	<header class="main-header">
+		<div class="container">
+
+			<nav class="header-nav main-header__header-nav">
+				<ul class="header-nav__nav-bar nav-bar">
+					<li><a href="#" class="nav-bar__nav-link"></a></li>
+					<li><a href="#" class="nav-bar__nav-link"></a></li>
+					<li><a href="#" class="nav-bar__nav-link"></a></li>
+					<li><a href="#" class="nav-bar__nav-link"></a></li>
+					<li><a href="#" class="nav-bar__nav-link"></a></li>
+					<li><a href="#" class="nav-bar__nav-link"></a></li>
+					<li><a href="#" class="nav-bar__nav-link"></a></li>
+				</ul>
+				<div class="btn-wrapper">
+					
+				</div>
+			</nav>
+		</div>
+
+	</header>
 </body>
 </html>
