Начал навигацию в header

--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
 <body>
 
 	<header class="main-header">
-		<div class="container">
 
-			<nav class="header-nav main-header__header-nav">
-				<ul class="header-nav__nav-bar nav-bar">
-					<li><a href="#" class="nav-bar__nav-link"></a></li>
-					<li><a href="#" class="nav-bar__nav-link"></a></li>
-					<li><a href="#" class="nav-bar__nav-link"></a></li>
-					<li><a href="#" class="nav-bar__nav-link"></a></li>
-					<li><a href="#" class="nav-bar__nav-link"></a></li>
-					<li><a href="#" class="nav-bar__nav-link"></a></li>
-					<li><a href="#" class="nav-bar__nav-link"></a></li>
-				</ul>
-				<div class="btn-wrapper">
-					
+		<nav class="header-nav">
+			<div class="container">
+				<div class="header-nav-wrapper">
+					<div class="nav-bar">
+						<a href="#" class="nav-bar__nav-link nav-bar__nav-link_active">Главная</a></li>
+						<a href="#" class="nav-bar__nav-link">О компании</a></li>
+						<a href="#" class="nav-bar__nav-link">Оплата</a></li>
+						<a href="#" class="nav-bar__nav-link">Доставка</a></li>
+						<a href="#" class="nav-bar__nav-link">Гарантия</a></li>
+						<a href="#" class="nav-bar__nav-link">Акции %</a></li>
+						<a href="#" class="nav-bar__nav-link">Контакты</a></li>
+					</div>
+					<div class="header-nav__login-bar login-bar">
+						<button class="login-bar__btn-reg">Регистрация</button>
+						<button class="login-bar__btn-login">Войти</button>
+					</div>
 				</div>
-			</nav>
-		</div>
+			</div>
+		</nav>
 
 	</header>
+
 </body>
 </html>
