--- a/index.html
+++ b/index.html
@@ -68,25 +68,31 @@
 			<div class="container">
 				
 				<div class="header-tools__wrapper">
-					<button class="header-tools__menu-btn">Каталог</button>
+					<div class="header-tools__menu-btn">Каталог</div>
 					<form class="header-tools__search-form search-form">
 						<input class="search-form__text-field" type="text" placeholder="Что ищем?">
 						<button class="search-form__btn" type="submit"></button>
 					</form>
-					<div class="header-tools__user-instruments">
-						<div class="header-tools__wish-list">
-							<img src="img/header/heart.png" alt="wish list">
-							<span>0</span>
+					<div class="header-tools__user-tools">
+						<div class="header-tools__user-tools-inner user-tool">
+							<a href="#" class="user-tool__icon-link">
+								<img class="user-tool__icon" src="img/header/heart.png" alt="wish list">
+							</a>
+							<span class="user-tool__number">0</span>
 						</div>
-						<div class="header-tools__bookmarks">
-							<img src="img/header/files.png" alt="bookmarks">
-							<span>0</span>
+						<div class="header-tools__user-tools-inner user-tool">
+							<a href="#" class="user-tool__icon-link">
+								<img class="user-tool__icon" src="img/header/files.png" alt="bookmarks">
+							</a>
+							<span class="user-tool__number">0</span>
 						</div>
-						<div class="header-tools__shopping-cart">
-							<img src="img/header/shopping-basket.png" alt="shopping cart">
-							<span>2</span>
+						<div class="header-tools__user-tools-inner user-tool">
+							<a href="#" class="user-tool__icon-link">
+								<img class="user-tool__icon" src="img/header/shopping-basket.png" alt="shopping cart">
+							</a>
+							<span class="user-tool__number user-tool__number_active">2</span>
 						</div>
-						<p class="header-tools__payment-summ">На сумму - <b>23 140</b> руб.</p>
+						<p class="header-tools__payment-sum">На сумму - <b>23 140</b> руб.</p>
 					</div>
 				</div>
 				
