Сверстал хедер, сделал выпадающий каталог

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Ювента-Крым</title>
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
 	<link rel="stylesheet" href="css/style.min.css">
 	<script src="https://kit.fontawesome.com/342d77aec5.js" crossorigin="anonymous"></script>
 </head>
@@ -86,6 +85,141 @@
 					</div>
 				</div>
 
+			</div>
+		</section>
+
+		<section class="header-tools">
+			<div class="container">
+
+				<div class="header-tools__wrap">
+					<nav class="header-tools__catalog catalog">
+						<a class="catalog__btn" href="#">Каталог</a>
+						<ul class="catalog__type-list">
+							<li>
+								<a href="#" class="catalog__type-name">Home & Garden / Бытовая техника</a>
+								<ul class="catalog__item-wrap">
+									<li>
+										<ul class="catalog__item-list">
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-1.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Аппараты высокого давления</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-2.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Пылесосы</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-3.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Системы полива и орошения</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-4.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Ручные подметальные машины</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-5.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Насосы</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-6.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Электровеники</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-7.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Пароочистители</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-8.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Гладильные системы</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-9.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Паропылесосы</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-10.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Стеклоочиститель</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-11.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Полотер</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-12.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Поломоечная машина</a>
+												</div>
+											</li>
+										</ul>
+										<ul class="catalog__extra-list">
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-13.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">Принадлежности</a>
+												</div>
+											</li>
+											<li>
+												<img class="catalog__item-img" src="img/header/menu/menu-item-14.png" alt="product photo">
+												<div class="catalog__item-bg">
+													<a class="catalog__item-link" href="#">для чистки и ухода</a>
+												</div>
+											</li>
+										</ul>
+									</li>
+								</ul>
+							</li>
+							<li>
+								<a href="#" class="catalog__type-name">Professional / Профессиональная техника</a>
+							</li>
+						</ul>
+					</nav>
+
+					<div class="header-tools__inner">
+						<form class="header-tools__search-form search-form" action="">
+							<input class="search-form__text-field" type="search" placeholder="Что ищем?">
+							<button class="search-form__btn"><i class="fas fa-search"></i></button>
+						</form>
+						<div class="header-tools__user-tools user-tools">
+							<div class="user-tools__wish-list">
+								<i class="far fa-heart"></i>
+								<span class="user-tools__number">0</span>
+							</div>
+							<div class="user-tools__wish-list">
+								<i class="far fa-copy"></i>
+								<span class="user-tools__number">0</span>
+							</div>
+							<div class="user-tools__wish-list">
+								<i class="fas fa-shopping-basket"></i>
+								<span class="user-tools__number">2</span>
+							</div>
+							<p class="user-tools__price">На сумму - <span>23 140</span> руб.</p>
+						</div>
+
+					</div>
+				</div>
+				
 			</div>
 		</section>
 	</header>
